# DDD-Choose

./: Cargo.toml  README.md  run.bat  wasm.html
frontend/: .env sample  .gitignore  README.md  package.json  serve.json
frontend/pkg/: README.md  dingdongdang.d.ts  dingdongdang.js  dingdongdang_bg.wasm  dingdongdang_bg.wasm.d.ts  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js  reducer.js
frontend/src/components/Book/: BookDetail.js
frontend/src/components/KakaoMap/: KakaoMap.css  KakaoMap.js
frontend/src/components/Search/: Search.js
frontend/src/hooks/: useVoice.js
frontend/src/hooks/useLibraSearch/: useLibraSearch.js
frontend/src/hooks/useSearch/: useSearch.js
frontend/src/pages/HandleAuth/: HandleAuth.js
frontend/src/pages/Home/: Home.js
frontend/src/pages/SearchResult/: SearchResult.css  SearchResult.js
src/: gpt.rs  lib.rs  place.rs
