[package]
name = "dingdongdang"
version = "0.1.0"
edition = "2021"
description = "딩동댕 키워드: GPT를 이용하여 사용자 질문에 관련한 카카오맵 보여주기"
license = "MIT"
repository = "https://github.com/Alfex4936/DDD-Choose"

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.5"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
gloo-utils = { version = "0.1", features = ["serde"] }